--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Noto Sans', sans-serif;
+font-family: 'Noto Sans', sans-serif;
 }
 
 
@@ -13,18 +13,19 @@ body {
     margin-bottom: 5px;
 }
 
-.dnerf {
-  font-variant: small-caps;
+.proteinbench {
+font-variant: small-caps;
+font-weight: bold;
 }
 
 
 .teaser .hero-body {
-  padding-top: 0;
-  padding-bottom: 3rem;
+padding-top: 0;
+padding-bottom: 3rem;
 }
 
 .teaser {
-  font-family: 'Google Sans', sans-serif;
+font-family: 'Google Sans', sans-serif;
 }
 
 
@@ -32,16 +33,16 @@ body {
 }
 
 .publication-banner {
-  max-height: parent;
+max-height: parent;
 
 }
 
 .publication-banner video {
-  position: relative;
-  left: auto;
-  top: auto;
-  transform: none;
-  object-fit: fit;
+position: relative;
+left: auto;
+top: auto;
+transform: none;
+object-fit: fit;
 }
 
 .publication-header .hero-body {
@@ -71,7 +72,7 @@ body {
 }
 
 .publication-authors a {
-   color: hsl(204, 86%, 53%) !important;
+    color: hsl(204, 86%, 53%) !important;
 }
 
 .publication-authors a:hover {
@@ -79,14 +80,14 @@ body {
 }
 
 .author-block {
-  display: inline-block;
+display: inline-block;
 }
 
 .publication-banner img {
 }
 
 .publication-authors {
-  /*color: #4286f4;*/
+/*color: #4286f4;*/
 }
 
 .publication-video {
@@ -111,52 +112,39 @@ body {
 }
 
 .results-carousel {
-  overflow: hidden;
-}
-
-.results-carousel .item {
-  margin: 5px;
-  overflow: hidden;
-  border: 1px solid #bbb;
-  border-radius: 10px;
-  padding: 0;
-  font-size: 0;
-}
-
-.results-carousel video {
-  margin: 0;
+overflow: hidden;
 }
 
 
-.interpolation-panel {
-  background: #f5f5f5;
-  border-radius: 10px;
+.stats-image {
+max-height: 250px;
 }
 
-.interpolation-panel .interpolation-image {
-  width: 100%;
-  border-radius: 5px;
+#org-banners {
+display:flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+flex-wrap: wrap;
 }
 
-.interpolation-video-column {
+.org-banner {
+/* margin: 5px; */
+max-width: 100%;
+height: 6em;
+margin: 10px;
+padding: 10px;
 }
 
-.interpolation-panel .slider {
-  margin: 0 !important;
+@media screen and (max-width: 768px) {
+#org-banners {
+    flex-direction: column;
+    justify-content: space-around;
+}
 }
 
-.interpolation-panel .slider {
-  margin: 0 !important;
-}
-
-#interpolation-image-wrapper {
-  width: 100%;
-}
-#interpolation-image-wrapper img {
-  border-radius: 5px;
-}
-
-.small-caps {
-  font-variant: small-caps;
-  letter-spacing: 0.03em;
+.js-sort-table {
+    margin: 3% auto; /* 水平居中 */
+    border-collapse: collapse; /* 可选：合并边框 */
+    width: auto; /* 或保持原有宽度设置 */
 }
