--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,150 +1,145 @@
 body {
-font-family: 'Noto Sans', sans-serif;
+  font-family: "Noto Sans", sans-serif;
 }
 
-
 .footer .icon-link {
-    font-size: 25px;
-    color: #000;
+  font-size: 25px;
+  color: #000;
 }
 
 .link-block a {
-    margin-top: 5px;
-    margin-bottom: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .proteinbench {
-font-variant: small-caps;
-font-weight: bold;
+  font-variant: small-caps;
+  font-weight: bold;
 }
 
-
 .teaser .hero-body {
-padding-top: 0;
-padding-bottom: 3rem;
+  padding-top: 0;
+  padding-bottom: 3rem;
 }
 
 .teaser {
-font-family: 'Google Sans', sans-serif;
+  font-family: "Google Sans", sans-serif;
 }
-
 
 .publication-title {
 }
 
 .publication-banner {
-max-height: parent;
-
+  max-height: parent;
 }
 
 .publication-banner video {
-position: relative;
-left: auto;
-top: auto;
-transform: none;
-object-fit: fit;
+  position: relative;
+  left: auto;
+  top: auto;
+  transform: none;
+  object-fit: fit;
 }
 
 .publication-header .hero-body {
 }
 
 .publication-title {
-    font-family: 'Google Sans', sans-serif;
+  font-family: "Google Sans", sans-serif;
 }
 
 .publication-authors {
-    font-family: 'Google Sans', sans-serif;
+  font-family: "Google Sans", sans-serif;
 }
 
 .publication-venue {
-    color: #555;
-    width: fit-content;
-    font-weight: bold;
+  color: #555;
+  width: fit-content;
+  font-weight: bold;
 }
 
 .publication-awards {
-    color: #ff3860;
-    width: fit-content;
-    font-weight: bolder;
+  color: #ff3860;
+  width: fit-content;
+  font-weight: bolder;
 }
 
 .publication-authors {
 }
 
 .publication-authors a {
-    color: hsl(204, 86%, 53%) !important;
+  color: hsl(204, 86%, 53%) !important;
 }
 
 .publication-authors a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 .author-block {
-display: inline-block;
+  display: inline-block;
 }
 
 .publication-banner img {
 }
 
 .publication-authors {
-/*color: #4286f4;*/
+  /*color: #4286f4;*/
 }
 
 .publication-video {
-    position: relative;
-    width: 100%;
-    height: 0;
-    padding-bottom: 56.25%;
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%;
 
-    overflow: hidden;
-    border-radius: 10px !important;
+  overflow: hidden;
+  border-radius: 10px !important;
 }
 
 .publication-video iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .publication-body img {
 }
 
 .results-carousel {
-overflow: hidden;
+  overflow: hidden;
 }
 
-
 .stats-image {
-max-height: 250px;
+  max-height: 250px;
 }
 
 #org-banners {
-display:flex;
-flex-direction: row;
-justify-content: center;
-align-items: center;
-flex-wrap: wrap;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .org-banner {
-/* margin: 5px; */
-max-width: 100%;
-height: 6em;
-margin: 10px;
-padding: 10px;
+  /* margin: 5px; */
+  max-width: 100%;
+  height: 6em;
+  margin: 10px;
+  padding: 10px;
 }
 
 @media screen and (max-width: 768px) {
-#org-banners {
+  #org-banners {
     flex-direction: column;
     justify-content: space-around;
-}
+  }
 }
 
 .js-sort-table {
-    margin: 3% auto; /* 水平居中 */
-    border-collapse: collapse; /* 可选：合并边框 */
-    width: auto; /* 或保持原有宽度设置 */
+  margin: 3% auto; /* 水平居中 */
+  border-collapse: collapse; /* 可选：合并边框 */
+  width: auto; /* 或保持原有宽度设置 */
 }
