--- a/static/css/leaderboard.css
+++ b/static/css/leaderboard.css
@@ -1,82 +1,81 @@
 /* Base Style */
 table {
-    border: 1px solid black;
-    border-collapse: collapse;
+  border: 1px solid black;
+  border-collapse: collapse;
 }
 
 th {
-    padding: 2px 5px;
-    border: 1px solid #ddd;
+  padding: 2px 5px;
+  border: 1px solid #ddd;
 }
 
 td {
-    padding: 2px 5px;
-    border: 1px solid black;
+  padding: 2px 5px;
+  border: 1px solid black;
 }
 
 thead {
-    background: #ddd;
+  background: #ddd;
 }
 
 /* Table for two sub-tasks */
 .js-sort-table {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 0.8rem;
-    /* border-collapse: collapse; */
-    width: 100%;
-    text-align: center;
-    margin: auto;
-    margin-top: 1em;
-    margin-bottom: 2em;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 0.8rem;
+  /* border-collapse: collapse; */
+  width: 100%;
+  text-align: center;
+  margin: auto;
+  margin-top: 1em;
+  margin-bottom: 2em;
 }
 
 /*table caption*/
 caption {
-    font-size: 1.2rem;
-    margin-bottom: 1%;
-    font-weight: bold;
+  font-size: 1.2rem;
+  margin-bottom: 1%;
+  font-weight: bold;
 }
 
 /*table title*/
 .js-sort-table th {
-    background-color: #016b66;
-    padding: 0.4%;
-    padding-top: 1%;
-    padding-bottom: 1%;
-    font-size: 0.8rem;
-    text-align: center;
-    font-weight: bold;
-    color: white;
-    vertical-align:middle;
+  background-color: #016b66;
+  padding: 0.4%;
+  padding-top: 1%;
+  padding-bottom: 1%;
+  font-size: 0.8rem;
+  text-align: center;
+  font-weight: bold;
+  color: white;
+  vertical-align: middle;
 }
 
-.js-sort-table td{
-    background-color: white;
-    border: 1px solid #ddd;
-    padding: 8px;
+.js-sort-table td {
+  background-color: white;
+  border: 1px solid #ddd;
+  padding: 8px;
 }
 
 .js-sort-table th > td {
-    border: 1px solid transparent;
+  border: 1px solid transparent;
 }
 
 .js-sort-table > tbody > tr:hover {
-    border: 2px solid #167c77;
+  border: 2px solid #167c77;
 }
 
 .js-sort-table tr td:nth-child(1) {
-    background-color: #f5f5f5;
-    font-weight: bold;
+  background-color: #f5f5f5;
+  font-weight: bold;
 }
-
 
 /* Cell Color */
-#first { 
-    background: #1E90FF; 
+#first {
+  background: #1e90ff;
 }
-#second { 
-    background: #87CEEB; 
+#second {
+  background: #87ceeb;
 }
-#third { 
-    background: #E0FFFF; 
+#third {
+  background: #e0ffff;
 }
